# gst-ti-dmai

./: ChangeLog  Makefile.am  Makefile.external  configure.ac
src/: Makefile.am  caps.c  caps.h  dm355.c  dm355s.c  dm355s.cfg  dm357.c  dm357.cfg  dm365.c  dm365.cfg  dm365s.cfg  dm37x.cfg  dm6446.c  dm6446.cfg  dm6467.c  dm6467.cfg  gsttiauddec.c  gsttiauddec1.c  gsttiauddec1.h  gsttiaudenc.c  gsttiaudenc1.c  gstticircbuffer.c  gstticircbuffer.h  gstticodecplugin.c  gstticodecplugin_dm355s.cfg  gstticommonutils.c  gstticommonutils.h  gsttidm365facedetect.c  gsttidm365facedetect.h  gsttidmaiaccel.c  gsttidmaiaccel.h  gsttidmaibasedualencoder.c  gsttidmaibasedualencoder.h  gsttidmaibasevideodualencoder.c  gsttidmaibasevideodualencoder.h  gsttidmaibuffertransport.c  gsttidmaibuffertransport.c.orig  gsttidmaibuffertransport.h  gsttidmaidec.c  gsttidmaidec.h  (+60 more)
